--- a/src/style.css
+++ b/src/style.css
@@ -12,8 +12,11 @@ h3 {
   font-weight: lighter;
 }
 .card {
-  margin-top: 30px;
-  width: 600px;
+  border: 1px solid #d61c8f;
+  padding: 15px;
+  margin: 20px auto;
+  border-radius: 10px;
+  max-width: 600px;
 }
 
 .city-search {
