--- a/src/style.css
+++ b/src/style.css
@@ -11,8 +11,9 @@ h3 {
   font-size: 20px;
   font-weight: lighter;
 }
+
 .card {
-  border: 1px solid #d61c8f;
+  border: 1px solid #e6dee3;
   padding: 15px;
   margin: 20px auto;
   border-radius: 10px;
@@ -45,4 +46,12 @@ h3 {
   list-style: none;
   position: relative;
   top: 12px;
+}
+
+.footer-info {
+  text-align: center;
+}
+
+.code-link {
+  text-decoration: none;
 }
